# zksync-era

./: .gitignore  .gitmodules  Cargo.toml  EigenDA.json  Makefile  Storage.sol  api_conversion_rate_server.py  backup-ecosystem.sh  base-token-demo.ts  docker-compose.yml  eigenda-integration.md  main.ts  report.csv  restore-ecosystem.sh  validium.md  validium_report.sh
.github/: CODEOWNERS
.github/workflows/: ci-core-reusable.yml  ci-core-rollup-reusable.yml  ci-core-validium-reusable.yml  ci-prover-reusable.yml  ci.yml
chains/eigenda/: ZkStack.yaml
chains/eigenda/configs/: contracts.yaml  general.yaml  genesis.yaml  secrets.yaml
core/: CHANGELOG.md  Cargo.toml
core/block_stm/: scheduler.rs
core/get_all_blobs/: Cargo.toml
core/get_all_blobs/abi/: commitBatchesSharedBridge.json
core/get_all_blobs/src/: blob_info.rs  client.rs  main.rs
core/lib/l1_contract_interface/: Cargo.toml
core/lib/multivm/: Cargo.toml  vm_logs.json
core/lib/zksync_core/: Cargo.toml
core/node/base_token_fetcher/: Cargo.toml
core/node/da_clients/: Cargo.toml
core/node/eigenda_proxy/: Cargo.toml  build.rs
core/node/eigenda_proxy/src/: blob_info.rs  certificate.rs  client.rs  disperser.rs  eigenda_client.rs  errors.rs  lib.rs  memstore.rs  request_processor.rs  rust_kzg_bn254.rs  signer.rs  verifier.rs
core/node/fee_model/: Cargo.toml
core/tests/ts-integration/: jest.config.json  package.json  tsconfig.json
core/tests/vm-benchmark/: Cargo.toml  baseline-snapshots.sh  baseline.sh  bench-base.txt  bench-compare.txt  bench-results-base.txt  bench-results-opt-heap.txt  bench-results.txt  bench_results.py  benchmark.sh  compare-snapshots.sh  compare.sh  compile.sh  out  out_v2  samply.sh
da_manager_example/: celestia.py  main.py  requirements.txt
da_manager_example/data/: pubdata_storage.json
etc/env/: dev.env  main_demo_rollup_blobs.toml  main_demo_rollup_calldata.toml  main_demo_validium_blobs.toml  main_demo_validium_calldata.toml
etc/env/base/: chain.toml  contracts.toml  eigen_da_client.toml  eth_client.toml  eth_sender.toml  vm_runner.toml
etc/env/configs/: commitment_generator.toml  consensus.toml  contract_verification_api.toml  dev.toml  dev_validium.toml  eth_tx_aggregator.toml  eth_tx_manager.toml  eth_watcher.toml  housekeeper.toml  http_api.toml  main_demo_rollup_blobs.toml  main_demo_rollup_calldata.toml  main_demo_validium_blobs.toml  main_demo_validium_calldata.toml  proof_data_handler.toml  state_keeper.toml  tee_verifier_input_producer.toml  tree.toml  ws_api.toml
etc/selector-generator-data/: selectors.json
etc/tokens/: native_erc20.json
get_all_blobs/: .gitignore  Cargo.toml  Makefile  README.md  getallblobs.js  package-lock.json
get_all_blobs/src/: main.rs
get_all_blobs_rs/: Cargo.toml
get_all_blobs_rs/src/: client.rs  main.rs
infrastructure/terraform/: ssh.tf  terraform.tfstate  terraform.tfstate.backup  user_data.yml
infrastructure/zk/src/: constants.ts  contract.ts  contract_verifier.ts  docker.ts  env.ts  hyperchain_wizard.ts  index.ts  (+5 more)
prover/: CHANGELOG.md
prover/prover_dal/: Cargo.toml
retrieve-blobs/: Cargo.toml  README.md
retrieve-blobs/src/: main.rs
scripts/: deploy.ts  init.sh  reloader.py
test-app/: constants.js  deposit.js  index.js  package.json  withdraw.js
validium_mode_example/: Cargo.toml  README.md
validium_mode_example/scripts/: create_gas_report.py  crete_gas_report.py
validium_mode_example/src/: main.rs  scenario.rs
zkstack_cli/: CHANGELOG.md
zksync_components/: Cargo.toml
zksync_components/src/: main.rs
zksync_full_stack/: validium_example.md
zksync_full_stack/src/: main.rs
(+314 files in other folders)
