[package]
name = "get_all_blobs"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
zksync_node_framework.workspace = true
tokio.workspace = true
axum.workspace = true
rustls.workspace = true
rlp.workspace = true
hex.workspace = true

reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true

tonic = { version = "0.12.1", features = ["tls", "channel", "tls-roots"]}
prost = "0.13.1"
kzgpad-rs = { git = "https://github.com/Layr-Labs/kzgpad-rs.git", tag = "v0.1.0" }
alloy = { version = "0.3", features = ["full"] }
futures = "0.3"
