[package]
name = "zksync_eigenda_proxy"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
rlp.workspace = true
rand.workspace = true
sha3.workspace = true
# we can't use the workspace version of prost because
# the tonic dependency requires a hugher version.
prost = "0.13.1"
tonic = { version = "0.12.1", features = ["tls", "channel", "tls-roots"]}
tonic-web = "0.12.1"
rust-kzg-bn254 = {git = "https://github.com/lambdaclass/rust-kzg-bn254", branch = "bump-ark"}
ark-bn254 = "0.5.0-alpha.0"
num-bigint = "0.4.6"
kzgpad-rs = { git = "https://github.com/Layr-Labs/kzgpad-rs.git", tag = "v0.1.0" }
ethabi = "16.0.0"
tiny-keccak = "2.0"

[build-dependencies]
tonic-build = { version = "0.12.1", features = ["prost"] }
